cmake_minimum_required(VERSION 3.24)
project(EKOSYSTEM)

set(CMAKE_CXX_STANDARD 17)

add_executable(EKOSYSTEM main.cpp zlab03.cpp zlab03.h organizm.cpp organizm.h ustawienia.h generatorlosowy.cpp generatorlosowy.h sasiedztwo.cpp sasiedztwo.h zlab06.cpp zlab06.h mieszkaniec.cpp mieszkaniec.h nisza.cpp nisza.h zlab09.cpp zlab09.h zlab10.cpp srodowisko.cpp srodowisko.h osobniki.cpp osobniki.h zlab12.cpp zlab12.h)
